# desktop-widget-rs

./: Cargo.toml  README.md  config.json
.cargo/: config.toml
.github/workflows/: release.yml
src/: app.rs  chart.rs  common.rs  config.rs  icons.rs  ipc.rs  language.rs  main.rs  settings.rs  settings_iced.rs  stock.rs  updater.rs
src/components/: chart.rs  mod.rs  settings_view.rs  widget_view.rs
