[package]
name = "desktop-widget-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["tokio", "canvas", "advanced", "image", "svg", "lazy", "debug"] }
tokio = { version = "1", features = ["full"] }
yahoo_finance_api = "2.1" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plotters = "0.3.5"
window-vibrancy = "0.4"
tray-icon = "0.19"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
once_cell = "1.19"
image = "0.24"
