[package]
name = "desktop-widget-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
window-vibrancy = "0.7"
softbuffer = "0.4"
yahoo_finance_api = "2.3"
tokio = { version = "1", features = ["full"] }
plotters = "0.3"
chrono = "0.4"
tray-icon = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

